created new point for browse categories
